--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.21.6
-loader_version=0.16.14
+loader_version=0.16.13
+modmenu_version=15.0.0-beta.1
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0
 maven_group=me.lukiiy
-archives_base_name=xpbarenhances
+archives_base_name=xdbar
