--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.21.9
-loader_version=0.17.2
-modmenu_version=15.0.0-beta.1
+loader_version=0.16.13
+modmenu_version=16.0.0-rc.1
 # Mod Properties
 mod_version=1.4
 maven_group=me.lukiiy
