--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.9
+minecraft_version=1.21.11
 loader_version=0.16.13
-modmenu_version=16.0.0-rc.1
+modmenu_version=17.0.0-alpha.1
 # Mod Properties
-mod_version=1.4-1.21.9
+mod_version=1.4-1.21.11
 maven_group=me.lukiiy
 archives_base_name=xdbar
